updates to documentation; docs now at root url
